# ubs-transactions-csv-parser

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
examples/: ubs-transactions-csv-parser.ipynb
src/tests/: test_parser.py  test_transactions.csv
src/ubs_transactions_csv_parser/: AccountExportData.py  AccountTransaction.py  CardExportData.py  CardTransaction.py  __init__.py  csv_export_data.py  currency.py  transaction.py
