[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubs-transactions-csv-parser"
version = "0.1.6"
description = "Parse and deduplicate UBS transaction CSV files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Riccardo Torreggiani", email = "riccardo.torreggiani@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = ["pycountry>=23"]

[project.urls]
Homepage = "https://github.com/rktr1998/ubs-transactions-csv-parser"
