[metadata]
name = ubs-transactions-csv-parser
version = attr: ubs_transactions_csv_parser.__version__
description = Parse and deduplicate UBS transaction CSV files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Riccardo Torreggiani
author_email = riccardo.torreggiani@gmail.com
url = https://github.com/rktr1998/ubs-transactions-csv-parser
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    # runtime dependencies here, e.g. "pandas>=1.0"

[options.packages.find]
where = src
